# simple-random-numbers

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yml
src/: main.rs
