[package]
name = "simple-random-generator"
version = "0.1.0"
description = "Random generator"
repository = "https://github.com/misilelab/simple-random-numbers"
authors = ["MisileLaboratory"]
readme = "README.md"
license-file = "LICENSE.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
clap = { version = "3.2.1" }
